--- a/ddosdb/ddosdb/templates/ddosdb/query.html
+++ b/ddosdb/ddosdb/templates/ddosdb/query.html
@@ -25,9 +25,9 @@
 
     <form action="{% url "query" %}" method="get">
         <div class="input-group">
-            <span class="btn btn-default btn-sm text-dark rounded" >Filter:</span>
+            <span class="btn btn-default btn-sm text-dark rounded" >Query:</span>
             <input type="text" class="form-control col-md-5" id="query" name="q" value="{{ q }}" placeholder="Search"><br/>
-            <span class="btn btn-default btn-sm text-dark rounded col-md-1">order:</span>
+            <span class="btn btn-default btn-sm text-dark rounded col-md-1">Sort:</span>
             <input type="text" class="form-control col-md-2" name="o" placeholder="order" value="{{ o }}">
             <span class="btn btn-default btn-sm text-dark rounded col-md-1">Fields:</span>
             <input type="text" class="form-control col-md-2" name="f" placeholder="fields" value="{{ f }}">
