--- a/ddosdb/ddosdb/templates/ddosdb/login.html
+++ b/ddosdb/ddosdb/templates/ddosdb/login.html
@@ -8,7 +8,7 @@
     <img class="mb-4 logo" src="{% static "ddosdb/img/logo.svg" %}" alt="" width="400" height="150">
     {% if failed %}
         <div class="alert alert-danger">
-            Invalid password
+            {{ message }}
         </div>
     {% endif %}
     <div class="form-group">
