To bootstrap 5 and clean-up

--- a/ddosdb/ddosdb/templates/ddosdb/footer.html
+++ b/ddosdb/ddosdb/templates/ddosdb/footer.html
@@ -1,28 +1,12 @@
 {% load static %}
-<footer class="my-5 pt-2 text-muted text-center text-small">
-{% comment %}
-  <img src="{% static "ddosdb/img/logo-sidnlabs.svg" %}" height="64">
-  &nbsp;&nbsp;&nbsp;&nbsp;
-  <img src="{% static "ddosdb/img/logo-SURF.svg" %}" height="48">
-  &nbsp;&nbsp;&nbsp;&nbsp;
-{% endcomment %}
-
-  <img src="{% static "ddosdb/img/logo-CONCORDIA1.svg" %}" height="64">
-
-{% comment %}
-  &nbsp;&nbsp;
-  <img src="{% static "ddosdb/img/logo-ut.png" %}" style="height="55">
-{#    <p class="mb-1">© 2018 J.J.C. Santanna</p> #}
-{% endcomment %}
-
-
+<div class="container d-flex">
+  <div class="col text-center">
+    <img src="{% static "ddosdb/img/logo-CONCORDIA1.svg" %}" height="64"><br/>
   {% if time %}
-<div class="row">
-  <div class="col-12">
-      <small class="text-muted text-right" align="middle"> {{ time }} seconds</small>
+    <small class="text-muted"> {{ time }} seconds</small>
+  {% endif %}
   </div>
 </div>
-  {% endif %}
 
   <ul class="list-inline">
         <!--
@@ -33,4 +17,4 @@
         <li class="list-inline-item"><a class="text-dark" href="mailto:j.j.santanna@utwente.nl">Contact Us</a></li>
         -->
   </ul>
-</footer>
+</div>
