--- a/ddosdb/ddosdb/templates/ddosdb/login.html
+++ b/ddosdb/ddosdb/templates/ddosdb/login.html
@@ -3,22 +3,30 @@
 <html lang="en">
 {% include 'ddosdb/header.html' %}
 <body class="bg-light text-center">
-<form class="py-5 mx-auto" style="width: 400px; max-width: 93vw" method="post" action="">
-    {% csrf_token %}
+
+<div class="container">
+  <div class="row justify-content-md-center">
+  <div class="col-md-auto login">
     <img class="mb-4 logo" src="{% static "ddosdb/img/logo.svg" %}" alt="" width="400" height="150">
-    {% if failed %}
-        <div class="alert alert-danger">
-            {{ message }}
+<!--    <form class="py-5 mx-auto" style="width: 400px; max-width: 93vw" method="post" action="">-->
+    <form class="mx-auto" style="width: 400px; max-width: 93vw" method="post" action="">
+        {% csrf_token %}
+        {% if failed %}
+            <div class="alert alert-danger">
+                {{ message }}
+            </div>
+        {% endif %}
+        <div class="form-group">
+            <input type="text" id="username" name="username" class="form-control" placeholder="Username" required autofocus>
         </div>
-    {% endif %}
-    <div class="form-group">
-        <input type="text" id="username" name="username" class="form-control" placeholder="Username" required autofocus>
-    </div>
-    <div class="form-group">
-        <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
-    </div>
-    <button class="btn btn-lg btn-secondary btn-block" type="submit">Sign in</button>
-        <br><a href="{% url "index" %}" class="text-dark pt-3"><i class="fa fa-arrow-left"></i> Back home</a>
-</form>
+        <div class="form-group">
+            <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
+        </div>
+        <button class="btn btn-lg btn-secondary btn-block" type="submit">Sign in</button>
+            <br><a href="{% url "index" %}" class="text-dark pt-3"><i class="fa fa-arrow-left"></i> Back home</a>
+    </form>
+  </div>
+  </div>
+</div>
 </body>
 </html>
