--- a/ddosdb/ddosdb/templates/ddosdb/header.html
+++ b/ddosdb/ddosdb/templates/ddosdb/header.html
@@ -5,10 +5,10 @@
 
     <link rel="stylesheet" href="{% static 'ddosdb/css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'ddosdb/css/fontawesome.css' %}">
-    <link rel="stylesheet" href="{% static 'ddosdb/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'ddosdb/css/ddosdb.css' %}">
     <link rel="shortcut icon" href="{% static 'ddosdb/img/favicon.png' %}"/>
     <!--
-    <script src="{% static 'ddosdb/js/jquery.js' %}"></script>
     <script src="{% static 'ddosdb/js/bootstrap.bundle.js' %}"></script>
     -->
+
 </head>
