--- a/ddosdb/ddosdb/templates/ddosdb/menu.html
+++ b/ddosdb/ddosdb/templates/ddosdb/menu.html
@@ -1,21 +1,49 @@
 {% load static %}
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 box-shadow container mt-3">
-  <a class="mr-md-auto" href="{% url 'index' %}">
-    <img title="go to start page" src="{% static "ddosdb/img/logo-new.svg" %}" height="40">
-  </a>
-  <nav class="my-2 my-md-0 mr-md-3">
-    <a class="p-2 text-dark" href="{% url 'about' %}">About</a>
-    <!--
-    <a class="p-2 text-dark" href="{% url 'index' %}">Blog</a>
-    -->
-    {% if not request.user.is_authenticated %}
-      <a class="p-2 text-dark" href="{% url 'login' %}">Log in</a>
-    {% else %}
-      <a class="p-2 text-dark" href="{% url 'account' %}">Account</a>
-      <a class="p-2 text-dark" href="{% url 'logout' %}">Log out ({{ request.user.username }})</a>
-      {% if request.user.is_superuser %}
-        <a class="p-2 text-dark" target="_blank" href="/admin/">admin</a>
+
+<div id="menu" class="container d-flex align-items-center">
+  <div class="col-xs-2">
+    <a href="{% url 'index' %}">
+      <img title="go to start page" src="{% static "ddosdb/img/logo-new.svg" %}" height="40">
+    </a>
+  </div>
+  <div class="col">
+  </div>
+  <div class="col-xs-5">
+    <nav class="nav text-end">
+      {% if not request.user.is_authenticated %}
+        <a class="nav-link" href="{% url 'login' %}">Log in</a>
+      {% else %}
+        <a class="nav-link" href="{% url 'account' %}">Account</a>
+        <a class="nav-link" href="{% url 'logout' %}">Log out ({{ request.user.username }})</a>
+        {% if request.user.is_superuser %}
+          <a class="nav-link" target="_blank" href="/admin/">admin</a>
+        {% endif %}
       {% endif %}
-    {% endif %}
-  </nav>
+      <a class="nav-link" href="{% url 'about' %}">About</a>
+      <!--
+      <a class="p-2 text-dark" href="{% url 'index' %}">Blog</a>
+      -->
+    </nav>
+  </div>
 </div>
+
+<!--<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 box-shadow container mt-3">-->
+<!--  <a class="mr-md-auto" href="{% url 'index' %}">-->
+<!--    <img title="go to start page" src="{% static "ddosdb/img/logo-new.svg" %}" height="40">-->
+<!--  </a>-->
+<!--  <nav class="my-2 my-md-0 mr-md-3">-->
+<!--    <a class="p-2 text-dark" href="{% url 'about' %}">About</a>-->
+<!--    &lt;!&ndash;-->
+<!--    <a class="p-2 text-dark" href="{% url 'index' %}">Blog</a>-->
+<!--    &ndash;&gt;-->
+<!--    {% if not request.user.is_authenticated %}-->
+<!--      <a class="p-2 text-dark" href="{% url 'login' %}">Log in</a>-->
+<!--    {% else %}-->
+<!--      <a class="p-2 text-dark" href="{% url 'account' %}">Account</a>-->
+<!--      <a class="p-2 text-dark" href="{% url 'logout' %}">Log out ({{ request.user.username }})</a>-->
+<!--      {% if request.user.is_superuser %}-->
+<!--        <a class="p-2 text-dark" target="_blank" href="/admin/">admin</a>-->
+<!--      {% endif %}-->
+<!--    {% endif %}-->
+<!--  </nav>-->
+<!--</div>-->
