--- a/ddosdb/ddosdb/templates/ddosdb/overview.html
+++ b/ddosdb/ddosdb/templates/ddosdb/overview.html
@@ -13,13 +13,17 @@
 {% include 'ddosdb/header.html' %}
 <body class="bg-light">
 {% include 'ddosdb/menu.html' %}
+
+<div class="container">
   {% if q != "" %}
     <h1 align="center" class="display-4 ddosdb-subtitle">Overview of some fingerprints ({{ results|length }}) - (<a href="{% url "overview" %}?q=&o={{ o }}&so={{ so }}&son={{ son }}">show all</a>)</h1>
   {% else %}
     <h1 align="center" class="display-4 ddosdb-subtitle">Overview of all fingerprints ({{ results|length }})</h1>
   {% endif %}
-<div>
-  <table class="table-hover" id="overview-table" align="center">
+</div>
+
+<div class="container">
+  <table class="table table-sm table-hover text-center" id="overview-table" align="center">
     <thead>
       <tr>
         <th nowrap="nowrap"></th>
@@ -27,11 +31,11 @@
           <th nowrap="nowrap">
           {% if hdr == o %}
             <div title="change to {{ son }} sort order">
-            <a href="{% url "overview" %}?q={{ q }}&o={{ hdr }}&so={{ son }}&son={{ so }}">
+            <a class="overview-header" href="{% url "overview" %}?q={{ q }}&o={{ hdr }}&so={{ son }}&son={{ so }}">
               <img width="16" height="16" src="{% static "ddosdb/img/" %}{{ so }}.png" alt="sort order is {{ so }}">
           {% else %}
             <div title="order by '{{name}}' ({{ so }})">
-            <a href="{% url "overview" %}?q={{ q }}&o={{ hdr }}&so={{ so }}&son={{ son }}">
+            <a class="overview-header" href="{% url "overview" %}?q={{ q }}&o={{ hdr }}&so={{ so }}&son={{ son }}">
               <img width="16" height="16" src="{% static "ddosdb/img/empty_sort.png" %}">
           {% endif %}
               {{ name }}
@@ -41,7 +45,7 @@
               <img width="16" height="16" src="{% static "ddosdb/img/red_cross.svg" %}">
             </a>
           {% endif %}
-        </div>
+            </div>
           </th>
         {% endfor %}
       </tr>
@@ -110,13 +114,13 @@
             {% elif hdr == "duration_sec" %}
                 {{node|get_item:hdr|precision:3}}
             {% elif hdr == "avg_bps" %}
-                {{node|get_item:hdr|precision:0|intcomma}}
+                <div class="text-end">{{node|get_item:hdr|precision:0|intcomma}}</div>
             {% elif hdr == "avg_pps" %}
-                {{node|get_item:hdr|precision:0|intcomma}}
-            {% elif hdr == "ips_involved" %}
-                {{node|get_item:hdr|precision:0|intcomma}}
+                <div class="text-end">{{node|get_item:hdr|precision:0|intcomma}}</div>
+            {% elif hdr == "total_ips" %}
+                <div class="text-end">{{node|get_item:hdr|precision:0|intcomma}}</div>
             {% elif hdr == "total_packets" %}
-                {{node|get_item:hdr|precision:0|intcomma}}
+                <div class="text-end">{{node|get_item:hdr|precision:0|intcomma}}</div>
             {% elif hdr == "submit_timestamp" %}
                 {{node|get_item:hdr|str_todatetime|date:'Y-m-d H:i:s'}}
             {% elif hdr == "tags" %}
@@ -147,23 +151,9 @@
   </table>
 </div>
 
-<div>
+<div class="container text-centered">
   {% if remotedbs %}
-  <br/>
-  <p align="center">{{ remotedbs|length }} remote DBs (
-    {% for node in remotedbs %}
-        {{node|get_item:'name'}},
-    {% endfor %}
-    ),
-      {{ syncfps }} Fingerprints to sync (push)
-{% comment %}
-      {% for node in results %}
-        {% if node|get_item:'shareable' == True %}
-          {{node|get_item:'key'}} |
-        {% endif %}
-      {% endfor %}
-{% endcomment %}
-    <br/><br/>
+  <p align="center" class="text-muted">
     <a class="btn btn-secondary" target="_blank" href="/admin/ddosdb/remoteddosdb/">Remote DBs</a>
 {% comment %}
     {% if syncfps > 0 %}
@@ -172,13 +162,26 @@
 {% comment %}
     {% endif %}
 {% endcomment %}
-    </p>
+  </p>
+  <p align="center" class="text-muted"><small>{{ remotedbs|length }} remote DBs (
+    {% for node in remotedbs %}
+        {{node|get_item:'name'}},
+    {% endfor %}
+    ),
+    {{ syncfps }} Fingerprints to sync (push)</small>
+{% comment %}
+      {% for node in results %}
+        {% if node|get_item:'shareable' == True %}
+          {{node|get_item:'key'}} |
+        {% endif %}
+      {% endfor %}
+{% endcomment %}
+    <br/>
+  </p>
   {% endif %}
 </div>
 
 
-<div class="col-sm-12">
-  {% include "ddosdb/footer.html" %}
-</div>
+ {% include "ddosdb/footer.html" %}
 </body>
 </html>
