--- a/ddosdb/ddosdb/static/ddosdb/css/ddosdb.css
+++ b/ddosdb/ddosdb/static/ddosdb/css/ddosdb.css
@@ -66,9 +66,6 @@ a:hover {
 /*  font-style: italic; */
 }
 
-.overview-header {
-  color: #303030;
-}
 
 .nav-link {
 /*  color: #0a58ca; */
@@ -80,15 +77,28 @@ a:hover {
   color: #a00000;
 }
 
+/*
+body {
+  margin: 0;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+*/
 
 /* JSON block for query page */
 
 .json-block {
     font-family: monospace;
-    font-size: 11pt;
+    font-size: 10pt;
+    line-height: 130%;
 }
 .json-block-indent {
-    padding-left: 1em;
+    padding-left: 1.5em;
 }
 .json-block-str {
     color: #005cbf;
