--- a/ddosdb/ddosdb/templates/ddosdb/index.html
+++ b/ddosdb/ddosdb/templates/ddosdb/index.html
@@ -12,11 +12,11 @@
         </div>
 
         <div class="container my-5" align="center">
-            <a class="btn btn-lg btn-secondary" target="_blank" href="{% url "overview" %}">Overview</a>
+            <a class="btn btn-ddosdb" target="_blank" href="{% url "overview" %}">Overview</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
             OR
             &nbsp;&nbsp;&nbsp;&nbsp;
-            <a class="btn btn-lg btn-secondary" target="_blank" href="{% url "query" %}?q=">Search</a>
+            <a class="btn btn-ddosdb" target="_blank" href="{% url "query" %}?q=">Search</a>
         </div>
     </div>
 </div>
