--- a/ddosdb/ddosdb/templates/ddosdb/login.html
+++ b/ddosdb/ddosdb/templates/ddosdb/login.html
@@ -22,7 +22,7 @@
         <div class="form-group">
             <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
         </div>
-        <button class="btn btn-lg btn-secondary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-ddosdb" type="submit">Sign in</button>
             <br><a href="{% url "index" %}" class="text-dark pt-3"><i class="fa fa-arrow-left"></i> Back home</a>
     </form>
   </div>
