--- a/ddosdb/ddosdb/templates/ddosdb/overview.html
+++ b/ddosdb/ddosdb/templates/ddosdb/overview.html
@@ -31,11 +31,11 @@
           <th nowrap="nowrap">
           {% if hdr == o %}
             <div title="change to {{ son }} sort order">
-            <a class="overview-header" href="{% url "overview" %}?q={{ q }}&o={{ hdr }}&so={{ son }}&son={{ so }}">
+            <a href="{% url "overview" %}?q={{ q }}&o={{ hdr }}&so={{ son }}&son={{ so }}">
               <img width="16" height="16" src="{% static "ddosdb/img/" %}{{ so }}.png" alt="sort order is {{ so }}">
           {% else %}
             <div title="order by '{{name}}' ({{ so }})">
-            <a class="overview-header" href="{% url "overview" %}?q={{ q }}&o={{ hdr }}&so={{ so }}&son={{ son }}">
+            <a href="{% url "overview" %}?q={{ q }}&o={{ hdr }}&so={{ so }}&son={{ son }}">
               <img width="16" height="16" src="{% static "ddosdb/img/empty_sort.png" %}">
           {% endif %}
               {{ name }}
@@ -154,11 +154,11 @@
 <div class="container text-centered">
   {% if remotedbs %}
   <p align="center" class="text-muted">
-    <a class="btn btn-secondary" target="_blank" href="/admin/ddosdb/remoteddosdb/">Remote DBs</a>
+    <a class="btn btn-ddosdb" target="_blank" href="/admin/ddosdb/remoteddosdb/">Remote DBs</a>
 {% comment %}
     {% if syncfps > 0 %}
 {% endcomment %}
-      &nbsp;<a class="btn btn-secondary" target="_blank" href="{% url "remote-sync" %}">Sync</a>
+      &nbsp;<a class="btn btn-ddosdb" target="_blank" href="{% url "remote-sync" %}">Sync</a>
 {% comment %}
     {% endif %}
 {% endcomment %}
